@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.15 2004/02/21 00:15:44 sjg Exp $
+$NetBSD: distinfo,v 1.16 2004/05/11 18:28:33 sjg Exp $
 
-SHA1 (bmake-20040220.tar.gz) = 01aba5d9bc8c4bff83c0f21178acd2f212640580
-Size (bmake-20040220.tar.gz) = 340411 bytes
+SHA1 (bmake-20040511.tar.gz) = 98540303fb59d5369ce1f6279c516b54f398ec42
+Size (bmake-20040511.tar.gz) = 342043 bytes
